--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -87,7 +87,7 @@
                             </div>
 
 
-                            <p class="caps">{{ post.content }}></p>
+                            {{ post.content }}>
                             
                             <div class="col-md-12 first">
                                 <div class="info">
