--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -86,8 +86,7 @@
                                 <div class="clear"></div>
                             </div>
 
-
-                            {{ post.content }}>
+                            {{ post.content }}
                             
                             <div class="col-md-12 first">
                                 <div class="info">
