--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -54,6 +54,7 @@
 
                         </div>
                     </article>
+                    <div class="clear"></div>
                 {% endfor %}
                 <!-- Post 2 -->
                 
