--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -52,6 +52,7 @@
 
                         </div>
                     </article>
+                <div class="clear"></div>
                 {% endfor %}
             </section>
 
