--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -13,7 +13,7 @@
                 <div class="clear"></div>
 
                 <!-- Post 2 -->
-                <article id="post-2" class="blog-article">                    
+                <article id="20200417nlpsteps" class="blog-article">                    
 
                     <div class="col-md-12">
 
@@ -34,7 +34,7 @@
                                     <div class="top_c ">
 
                                         <div class="title_content">
-                                            <div class="text_content"><a href="#post-2" class="read_more">Blog Aside post</a></div>
+                                            <div class="text_content"><a href="#20200417nlpsteps" class="read_more">Blog Aside post</a></div>
                                             <div class="clear"></div>
                                         </div>
 
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>	
 
-                                <a href="#post-2" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
+                                <a href="#20200417nlpsteps" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
 
                             </div>
                         </div>
@@ -66,7 +66,7 @@
 
 
             <!-- Page Blog - Post 2 -->
-            <section id="post-2-page" class="content-post" style="display: none">
+            <section id="20200417nlpsteps-page" class="content-post" style="display: none">
                 <div class="row inner">
 
                     <div class="col-md-12" style="width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;float: left;background: rgba(255, 255, 255, 0.8);padding-bottom: 15px;padding-top: 15px;">
