--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -13,7 +13,7 @@
                 <div class="clear"></div>
 
                 <!-- Post 2 -->
-                <article id="20200417nlpsteps" class="blog-article">                    
+                <article id="post-2" class="blog-article">                    
 
                     <div class="col-md-12">
 
@@ -34,7 +34,7 @@
                                     <div class="top_c ">
 
                                         <div class="title_content">
-                                            <div class="text_content"><a href="#20200417nlpsteps" class="read_more">Blog Aside post</a></div>
+                                            <div class="text_content"><a href="#post-2" class="read_more">Blog Aside post</a></div>
                                             <div class="clear"></div>
                                         </div>
 
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>	
 
-                                <a href="#20200417nlpsteps" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
+                                <a href="#post-2" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
 
                             </div>
                         </div>
