--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -94,8 +94,8 @@
 
 
                                 <div class="col-md-12"  style="margin-top: 20px;">
-                                    <a href="#{{ post.next.id | remove: "/"  }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
-                                    <a href="#{{ post.previous.id | remove: "/" }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                                    <a href="#post-{{ post.next.id | remove: "/"  }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                                    <a href="#post-{{ post.previous.id | remove: "/" }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
                                     <a href="#blog" class="readmore"><i class="glyphicon glyphicon-chevron-left"></i> All Posts</a>
                                 </div>
 
