--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -92,10 +92,11 @@
 
                                 <div class="clear"></div>       
 
-
+                                {% assign next_post = post.next.id | remove: "/" %}
+                                {% assign prev_post = post.next.id | remove: "/" %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
-                                    <a href="#post-{{ post.next.id | remove: "/"  }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
-                                    <a href="#post-{{ post.previous.id | remove: "/" }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                                    <a href="#post-{{ prev_post }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                                    <a href="#post-{{ next_post }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
                                     <a href="#blog" class="readmore"><i class="glyphicon glyphicon-chevron-left"></i> All Posts</a>
                                 </div>
 
