--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -91,8 +91,8 @@
                                 </div>
 
                                 <div class="clear"></div>       
-                                {% assign prev_post = "#post-" | append: post.prev.id | remove: "/" %}
-                                {% assign next_post = "#post-" | append: post.next.id | remove: "/" %}
+                                {% assign prev_post = post.prev.id | remove: "/" | prepend: "#post-" %}
+                                {% assign next_post = post.next.id | remove: "/" | prepend: "#post-" %}
                                 {% if forloop.first %}{% assign prev_post = "" %}{% endif %}
                                 {% if forloop.last %}{% assign prev_post = "" %}{% endif %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
