--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -91,12 +91,12 @@
                                 </div>
 
                                 <div class="clear"></div>       
-                                {% capture prev_post %}#post-{{ post.previous.id | remove: "/" }}{% endcapture %}
+                                {% capture prev_post %}#post-{{ post.id | remove: "/" }}{% endcapture %}
                                 {% assign next_post = post.id | remove: "/" | prepend: "#post-" %}
                                 {% if forloop.first %}{% assign prev_post = "#" %}{% endif %}
                                 {% if forloop.last %}{% assign next_post = "#" %}{% endif %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
-                                    <a href="{{ next_post }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                                    <a href="{{ post.previous.id | remove: "/"  }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
                                     <a href="{{ prev_post }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
                                     <a href="#blog" class="readmore"><i class="glyphicon glyphicon-chevron-left"></i> All Posts</a>
                                 </div>
