--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -91,8 +91,8 @@
                                 </div>
 
                                 <div class="clear"></div>       
-                                {% capture prev_post %}#post-"{{ post.previous.id | remove: "/" }}"{% endcapture %}
-                                {% assign next_post = post.id | remove: "/" | prepend: "#post-" %}
+                                {% capture prev_post %}#post-{{ post.previous.id | remove: "/" }}{% endcapture %}
+                                {% assign next_post = post.id | remove: "/" %}
                                 {% if forloop.first %}{% assign prev_post = "#" %}{% endif %}
                                 {% if forloop.last %}{% assign next_post = "#" %}{% endif %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
