--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -92,8 +92,8 @@
 
                                 <div class="clear"></div>       
                                 
-                                {% assign prev_post = post.id | remove: "/" %}{% assign prev_post = prev_post | prepend: "#post-" %}
-                                {% assign next_post = post.id | remove: "/" %}{% assign next_post = next_post | prepend: "#post-" %}
+                                {% assign prev_post = post.previous.id | remove: "/" %}{% assign prev_post = prev_post | prepend: "#post-" %}
+                                {% assign next_post = post.next.id | remove: "/" %}{% assign next_post = next_post | prepend: "#post-" %}
                                 {% if forloop.first %}{% assign prev_post = "#" %}{% endif %}
                                 {% if forloop.last %}{% assign next_post = "#" %}{% endif %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
