--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -91,8 +91,8 @@
                                 </div>
 
                                 <div class="clear"></div>       
-                                
-                                {% assign prev_post = post.previous.id | remove: "/" %}{% assign prev_post = prev_post | prepend: "#post-" %}
+                                {% capture prev_post %}{{ post.previous.id | remove: "/" }}{% endcapture %}
+                                {% assign prev_post = prev_post | prepend: "#post-" %}
                                 {% assign next_post = post.next.id | remove: "/" %}{% assign next_post = next_post | prepend: "#post-" %}
                                 {% if forloop.first %}{% assign prev_post = "#" %}{% endif %}
                                 {% if forloop.last %}{% assign next_post = "#" %}{% endif %}
