--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -92,9 +92,16 @@
 
                                 <div class="clear"></div>       
                                 {% assign next_post = post.next.id | remove: "/" %}{% assign next_post = next_post | prepend: "#post-" %}
-                                {% if forloop.first %}{% assign prev_post = "#" %}{% endif %}
-                                {% if forloop.last %}{% assign next_post = "#" %}{% endif %}
-                                {% capture prev_post %}{{ post.previous.id | remove: "/" }}{% endcapture %}
+                                {% if forloop.first %}
+                                    {% assign prev_post = "#" %}
+                                {% else %}
+                                    {% assign prev_post = post.previous.id | remove: "/" | prepend: "#post-" }}
+                                {% endif %}
+                                {% if forloop.last %}
+                                    {% assign next_post = "#" %}
+                                {% else %}
+                                    {% assign next_post = post.next.id | remove: "/" | prepend: "#post-" }}
+                                {% endif %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
                                     <a href="{{ next_post }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
                                     <a href="{{ prev_post }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
