--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -95,12 +95,12 @@
                                 {% if forloop.first %}
                                     {% assign prev_post = "#" %}
                                 {% else %}
-                                    {% assign prev_post = post.previous.id | remove: "/" | prepend: "#post-" }}
+                                    {% assign prev_post = post.previous.id | remove: "/" | prepend: "#post-" %}
                                 {% endif %}
                                 {% if forloop.last %}
                                     {% assign next_post = "#" %}
                                 {% else %}
-                                    {% assign next_post = post.next.id | remove: "/" | prepend: "#post-" }}
+                                    {% assign next_post = post.next.id | remove: "/" | prepend: "#post-" %}
                                 {% endif %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
                                     <a href="{{ next_post }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
