--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -97,8 +97,8 @@
                                 {% if forloop.last %}{% assign prev_prefix = "#" %}{% endif %}
                                 {% if forloop.first %}{% assign next_prefix = "#" %}{% endif %}
                                 <div class="col-md-12"  style="margin-top: 20px;">
-                                    <a href="{{ post.next.id | remove: "/" | prepend: next_prefix }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
-                                    <a href="{{ post.previous.id | remove: "/" | prepend: prev_prefix }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                                    <a href="{{ post.previous.id | remove: "/" | prepend: prev_prefix }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                                    <a href="{{ post.next.id | remove: "/" | prepend: next_prefix }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
                                     <a href="#blog" class="readmore"><i class="glyphicon glyphicon-chevron-left"></i> All Posts</a>
                                 </div>
 
