--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -34,10 +34,11 @@
                                                 <div class="text_content"><a href="#post-{{ post.id | remove: "/" }}" class="read_more">{{ post.title }}</a></div>
                                                 <div class="clear"></div>
                                             </div>
-
+                                            
+                                            {% capture post_tags %}{% for tag in post.tags %}{{ tag | downcase }}|{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
                                             <ul class="info">
                                                 <li><i class="glyphicon glyphicon-time"></i> {{ post.date | date: "%B %-d, %Y" }} </li>
-                                                <li><i class="glyphicon glyphicon-tag"></i> {{ post.tags }} </li>
+                                                <li><i class="glyphicon glyphicon-tag"></i> {{ post_tags }} </li>
                                             </ul>
 
                                             <div class="blog-content">
