--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -35,7 +35,7 @@
                                                 <div class="clear"></div>
                                             </div>
                                             
-                                            {% capture post_tags %}{% for tag in post.tags %}{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+                                            {% capture post_tags %}{% for tag in post.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}{% endcapture %}
                                             <ul class="info">
                                                 <li><i class="glyphicon glyphicon-time"></i> {{ post.date | date: "%B %-d, %Y" }} </li>
                                                 <li><i class="glyphicon glyphicon-tag"></i> {{ post_tags }} </li>
@@ -84,10 +84,10 @@
                             
                             <div class="col-md-12 first">
                                 <div class="info">
-
+                                    {% capture post_tags %}{% for tag in post.tags %}{{ tag }}{% unless forloop.last %}, {% endunless %}{% endfor %}{% endcapture %}
                                     <ul class="info-post">
                                         <li><i class="glyphicon glyphicon-time"></i> {{ post.date | date: "%B %-d, %Y" }}</li>
-                                        <li><i class="glyphicon glyphicon-tag"></i> {{ post.tags }}</li>
+                                        <li><i class="glyphicon glyphicon-tag"></i> {{ post_tags }}</li>
                                     </ul>
                                 </div>
 
