--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -21,16 +21,9 @@
                 <div class="clear"></div>
             </li>
 
-            <li>
-                <i class="glyphicon glyphicon-calendar"></i>
-                <label>Date of birth</label>
-                <span class="value">Nov. 20, 1991</span>
-                <div class="clear"></div>
-            </li>
-
             <li> 
                 <i class="glyphicon glyphicon-map-marker"></i>
-                <label>Adress</label>
+                <label>Location</label>
                 <span class="value">New York, NY</span>
                 <div class="clear"></div>
             </li>
