--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -233,7 +233,7 @@
         <!-- /.title_content -->
         
         <!-- .download_resume -->
-        <a class="download" style="margin:0;float: left;" href="#">
+        <a class="download" style="margin:0;float: left;" href="download/Resume.pdf">
             <span data-hover="Download My Resume"><i class="glyphicon glyphicon-download-alt"></i> Download My Resume</span>
         </a>
         <!-- /.download_resume -->
