--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,11 +10,12 @@
         <!-- #filters -->
         
         <ul id="filters" class="clearfix">
-            <li><span class="filter active" data-filter="catWeb catGraphic catMotion logo">All</span></li>
+            <li><span class="filter active" data-filter="catWeb catGraphic catMotion catML logo">All</span></li>
             <li><span class="filter" data-filter="catWeb">Web Design</span></li>
             <li><span class="filter" data-filter="catGraphic">Graphic Design</span></li>
             <li><span class="filter" data-filter="catMotion">Motion Graphic</span></li>
             <li><span class="filter" data-filter="logo">Logo</span></li>
+            <li><span class="filter" data-filter="catML">Machine Learning</span></li>
         </ul>
         <!-- /#filters -->
    
@@ -23,15 +24,15 @@
         <div id="portfoliolist">
 
             <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">	
+            <div class="portfolio logo" data-cat="catML">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/1.jpg" rel="portfolio" title="Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet">
+                    <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-4" target="_blank">
                         <img src="images/portfolio/1.jpg" alt="Visual Infography" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
+                                <a class="text-title">Text to Photo-Realistic Image Synthesis</a>
+                                <span class="text-category">Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
