--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -16,6 +16,7 @@
             <li><span class="filter" data-filter="catMotion">Motion Graphic</span></li>
             <li><span class="filter" data-filter="logo">Logo</span></li>
             <li><span class="filter" data-filter="catML">Machine Learning</span></li>
+            <li><span class="filter" data-filter="catArchitecture">Computer Architecture</span></li>
         </ul>
         <!-- /#filters -->
    
@@ -24,11 +25,11 @@
         <div id="portfoliolist">
 
             <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="catML">	
+            <div class="portfolio catML" data-cat="catML">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-4" target="_blank">
-                        <img src="images/portfolio/1.jpg" alt="Visual Infography" />
+                        <img src="images/portfolio/1.jpg" alt="Text to Photo-Realistic Image Synthesis" />
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Text to Photo-Realistic Image Synthesis</a>
