--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -33,7 +33,7 @@
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Text to Photo-Realistic Image Synthesis</a>
-                                <span class="text-category">GG ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet</span>
+                                <span class="text-category">GGGG ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
