--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -637,7 +637,7 @@ h2.resp-accordion:hover {
 }
 
 .portfolio-wrapper {
-    word-wrap: break-word;
+    overflow:hidden;
     position: relative !important;
     background: #666;
     cursor:pointer;
@@ -652,7 +652,7 @@ h2.resp-accordion:hover {
     position: absolute;
     width: 100%;
     height:60px;
-    bottom:-60px;
+    bottom:-60px !important;
     display: block !important;
 }
 
