--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -638,6 +638,7 @@ h2.resp-accordion:hover {
 
 .portfolio-wrapper {
     overflow:hidden;
+    overflow-wrap: break-word;
     position: relative !important;
     background: #666;
     cursor:pointer;
@@ -651,8 +652,8 @@ h2.resp-accordion:hover {
 .portfolio .label {
     position: absolute;
     width: 100%;
-    height:60px;
-    bottom:-60px !important;
+    height:80px;
+    bottom:-80px;
     display: block !important;
 }
 
