--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -637,7 +637,7 @@ h2.resp-accordion:hover {
 }
 
 .portfolio-wrapper {
-    overflow-wrap: break-word;
+    overflow:hidden;
     position: relative !important;
     background: #666;
     cursor:pointer;
@@ -649,6 +649,8 @@ h2.resp-accordion:hover {
 }
 
 .portfolio .label {
+    word-break: break-all;
+    white-space: normal;
     position: absolute;
     width: 100%;
     height:80px;
