--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -25,15 +25,15 @@
         <div id="portfoliolist">
 
             <!-- .portfolio -->
-            <div class="portfolio catML" data-cat="catML">	
+            <div class="portfolio catML catArchitecture" data-cat="catML catArchitecture">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-4" target="_blank">
                         <img src="images/portfolio/1.jpg" alt="Text to Photo-Realistic Image Synthesis" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Text to Photo-Realistic Image Synthesis</a>
-                                <span class="text-category">GG ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet</span>
+                                <a class="text-title">Text to Image Synthesis</a>
+                                <span class="text-category">Generate realistic flower images according to the given descriptions.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
