--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -16,7 +16,8 @@
             <li><span class="filter" data-filter="catMotion">Motion Graphic</span></li>
             <li><span class="filter" data-filter="logo">Logo</span></li>
             <li><span class="filter" data-filter="catML">Machine Learning</span></li>
-            <li><span class="filter" data-filter="catArchitecture">Computer Architecture</span></li>
+            <li><span class="filter" data-filter="catDM">Data Mining</span></li>
+            <li><span class="filter" data-filter="catCA">Computer Architecture</span></li>
         </ul>
         <!-- /#filters -->
    
@@ -25,11 +26,11 @@
         <div id="portfoliolist">
 
             <!-- .portfolio -->
-            <div class="portfolio catML catArchitecture" data-cat="catML catArchitecture">	
+            <div class="portfolio catML catCA" data-cat="catML catCA">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-4" target="_blank">
-                        <img src="images/portfolio/1.jpg" alt="Text to Photo-Realistic Image Synthesis" />
+                        <img src="images/portfolio/1.jpg" alt="Text to Image Synthesis" />
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Text to Image Synthesis</a>
@@ -46,16 +47,15 @@
 
 
             <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">	
+            <div class="portfolio catDM" data-cat="catDM">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
-                    <a href="http://www.youtube.com/watch?v=c9MnSeYYtYY" rel="portfolio">
-
-                        <img src="images/portfolio/2.jpg" alt="Visual Infography" />
+                    <a href="https://github.com/wuhoward/MDA-HWs/tree/master/MDA_TermProject_105062635" target="_blank">
+                        <img src="images/portfolio/2.jpg" alt="Bakery Dataset Mining" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web Design</span>
+                                <a class="text-title">Bakery Dataset Mining</a>
+                                <span class="text-category">Solved Frequent Itemset Problem with SON algorithm (distributed Apriori).</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
