--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -649,12 +649,12 @@ h2.resp-accordion:hover {
 }
 
 .portfolio .label {
-    word-break: break-all;
+    word-break: break-word;
     white-space: normal;
     position: absolute;
     width: 100%;
-    height:80px;
-    bottom:-80px;
+    height:60px;
+    bottom:-60px;
     display: block !important;
 }
 
