--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -66,15 +66,15 @@
             <!-- /.portfolio -->
 
             <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">
+            <div class="portfolio catCA" data-cat="catCA">
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/3.jpg" rel="portfolio">
-                        <img src="images/portfolio/3.jpg" alt="Sonor's Design" />
+                    <a href="https://github.com/wuhoward/VLSI_Design_Final"  target="_blank">
+                        <img src="images/portfolio/3.jpg" alt="SAO Filter Accelerator" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web design</span>
+                                <a class="text-title">SAO Filter Accelerator</a>
+                                <span class="text-category">Completed RTL, pre-layout and post-layout simulations.</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -85,15 +85,15 @@
             <!-- /.portfolio -->
 
             <!-- .portfolio -->
-            <div class="portfolio catMotion" data-cat="catMotion">
+            <div class="portfolio catCA" data-cat="catCA">
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/4.jpg" rel="portfolio">
-                        <img src="images/portfolio/4.jpg" alt="Typography Company" />
+                    <a href="https://github.com/wuhoward/MC-Projects" target="_blank">
+                        <img src="images/portfolio/4.jpg" alt="Mandelbrot Set on Rocket Chip" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Motion Graphic</span>
+                                <a class="text-title">Mandelbrot Set on Rocket Chip</a>
+                                <span class="text-category">Implemented a co-processor and a simplified message-passing libirary (ilib).</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
