--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,11 +10,7 @@
         <!-- #filters -->
         
         <ul id="filters" class="clearfix">
-            <li><span class="filter active" data-filter="catWeb catGraphic catMotion catML logo">All</span></li>
-            <li><span class="filter" data-filter="catWeb">Web Design</span></li>
-            <li><span class="filter" data-filter="catGraphic">Graphic Design</span></li>
-            <li><span class="filter" data-filter="catMotion">Motion Graphic</span></li>
-            <li><span class="filter" data-filter="logo">Logo</span></li>
+            <li><span class="filter active" data-filter="catML catDM catCA">All</span></li>
             <li><span class="filter" data-filter="catML">Machine Learning</span></li>
             <li><span class="filter" data-filter="catDM">Data Mining</span></li>
             <li><span class="filter" data-filter="catCA">Computer Architecture</span></li>
@@ -94,158 +90,6 @@
                             <div class="label-text">
                                 <a class="text-title">Mandelbrot Set on Rocket Chip</a>
                                 <span class="text-category">Implemented a co-processor and a simplified message-passing libirary (ilib).</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">
-                    <a href="images/portfolio/5.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">
-                        <img src="images/portfolio/5.jpg" alt="Weatherette" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web Design</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catMotion" data-cat="catMotion">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/6.jpg" rel="portfolio">				
-                        <img src="images/portfolio/6.jpg" alt="BMF" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Motion Graphic</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catGraphic" data-cat="catGraphic">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/7.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">				
-                        <img src="images/portfolio/7.jpg" alt="Techlion" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Graphic Design</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/8.jpg" rel="portfolio" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien.">
-                        <img src="images/portfolio/8.jpg" alt="KittyPic" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">			
-                    <a href="images/portfolio/9.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">
-                        <img src="images/portfolio/9.jpg" alt="Graph Plotting" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Web Design</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio catGraphic" data-cat="catGraphic">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">	
-                    <a href="images/portfolio/10.jpg" rel="portfolio">
-                        <img src="images/portfolio/10.jpg" alt="QR Quick Response" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Graphic Design</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">	
-                    <a href="images/portfolio/11.jpg" title="Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien." rel="portfolio">
-                        <img src="images/portfolio/11.jpg" alt="Mobi Sock" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
-                            </div>
-                            <div class="label-bg"></div>
-                        </div>
-                    </a>
-                </div>
-                <!-- /.portfolio-wrapper -->
-            </div>	
-            <!-- /.portfolio -->
-
-            <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">
-                <!-- .portfolio-wrapper -->
-                <div class="portfolio-wrapper">
-                    <a href="images/portfolio/12.jpg" rel="portfolio">
-                        <img src="images/portfolio/12.jpg" alt="Village Community Church" />
-                        <div class="label">
-                            <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
