--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -38,24 +38,11 @@
             <li>
                 <i class="glyphicon glyphicon-phone"></i>
                 <label>Phone</label>
-                <span class="value">+(917) 302-5403</span>
+                <span class="value">(917) 302-5403</span>
                 <div class="clear"></div>
             </li>
 
         </ul>
-
-        <!-- 
-	<p style="margin-bottom:20px">
-            <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis.
-        </p>
-        
-         <p style="margin-bottom:20px">
-            <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. 
-
-        </p>
-	-->
 
     </div>
     <!-- End left-wrap -->
