--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -26,7 +26,7 @@
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-4" target="_blank">
-                        <img src="images/portfolio/1.jpg" alt="Text to Image Synthesis" />
+                        <img src="images/portfolio/StackGAN.jpg" alt="Text to Image Synthesis" />
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Text to Image Synthesis</a>
