--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -22,7 +22,7 @@
         <div id="portfoliolist">
 
             <!-- .portfolio -->
-            <div class="portfolio catML catCA" data-cat="catML catCA">	
+            <div class="portfolio catML" data-cat="catML">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-4" target="_blank">
@@ -66,7 +66,7 @@
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">			
                     <a href="https://github.com/wuhoward/VLSI_Design_Final"  target="_blank">
-                        <img src="images/portfolio/3.jpg" alt="SAO Filter Accelerator" />
+                        <img src="images/portfolio/APR.jpg" alt="SAO Filter Accelerator" />
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">SAO Filter Accelerator</a>
