--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -47,7 +47,7 @@
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
                     <a href="https://github.com/wuhoward/MDA-HWs/tree/master/MDA_TermProject_105062635" target="_blank">
-                        <img src="images/portfolio/2.jpg" alt="Bakery Dataset Mining" />
+                        <img src="images/portfolio/Bakery.jpg" alt="Bakery Dataset Mining" />
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Bakery Dataset Mining</a>
@@ -85,7 +85,7 @@
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">			
                     <a href="https://github.com/wuhoward/MC-Projects" target="_blank">
-                        <img src="images/portfolio/4.jpg" alt="Mandelbrot Set on Rocket Chip" />
+                        <img src="images/portfolio/RocketChip.jpg" alt="Mandelbrot Set on Rocket Chip" />
                         <div class="label">
                             <div class="label-text">
                                 <a class="text-title">Mandelbrot Set on Rocket Chip</a>
