--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -233,7 +233,7 @@
         <!-- /.title_content -->
         
         <!-- .download_resume -->
-        <a class="download" style="margin:0;float: left;" href="download/Resume.pdf">
+        <a class="download" style="margin:0;float: left;" href="download/Resume.pdf" target="_blank">
             <span data-hover="Download My Resume"><i class="glyphicon glyphicon-download-alt"></i> Download My Resume</span>
         </a>
         <!-- /.download_resume -->
@@ -328,7 +328,7 @@
             <li>
                 <h5>Honorable Mention (Top 10)<span class="duration"><i class="fa fa-calendar color"></i> 2014</span></h5>
                 <h6><span class="fa fa-trophy"></span> ICCAD CAD Contest</h6>
-                <p>Simultaneous CNF Encoder Optimization with SAT Solver Setting Selections.</p>
+                <p><a href="https://github.com/wuhoward/2014_CAD_Contest_ProblemA" target="_blank">Simultaneous CNF Encoder Optimization with SAT Solver Setting Selections</a></p>
             </li>
   
         </ul>
