--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -40,7 +40,24 @@
             </div>		
             <!-- /.portfolio -->
 
-
+            <!-- .portfolio -->
+            <div class="portfolio catML" data-cat="catML">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="https://github.com/wuhoward/DL-Projects/tree/master/Competition-3" target="_blank">
+                        <img src="images/portfolio/Taylor.png" alt="Image Caption" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">Image Caption</a>
+                                <span class="text-category">Used LSTM + Attention to generate text descriptions for images.</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
 
             <!-- .portfolio -->
             <div class="portfolio catDM" data-cat="catDM">	
