--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -257,7 +257,7 @@
             <li class="first">
                 <h5>Research Assistant <span class="duration"><i class="fa fa-calendar color"></i> Jan. 2019 - June. 2019</span></h5>
                 <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
-                <p>Created a Network Morphism tool which can transform layers of pre-trained CNNs based on user-specified arguments. Enabled CNN model pruning with various importance metrics and efficient neural architecture search.</p>
+                <p>Created a tool for Network Architecture Search (NAS) which can transform layers of pre-trained CNNs based on user-specified arguments. Enabled CNN model pruning with various importance metrics.</p>
             </li>
 	    <li>
                 <h5>Teaching Assistant <span class="duration"><i class="fa fa-calendar color"></i> Sept. 2016 - Jan. 2018</span></h5>
@@ -267,7 +267,7 @@
             <li>
                 <h5>Second Lieutenant<span class="duration"><i class="fa fa-calendar color"></i> Aug. 2014 - Aug. 2015</span></h5>
                 <h6><span class="fa fa-briefcase"></span> The Taiwan R.O.C. Army</h6>
-                <p>I was in charge of the political affairs of Battalion B of 21st Artillery Command. Counseled soldiers with mental health problems.</p>
+                <p>In charge of the political affairs of Battalion B of 21st Artillery Command. Helped soldiers reduced stress.</p>
             </li>
             <li>
                 <h5>Web Developer Intern <span class="duration"><i class="fa fa-calendar color"></i> Mar. 2014 - July 2014</span></h5>
