--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -267,7 +267,7 @@
             <li>
                 <h5>Second Lieutenant<span class="duration"><i class="fa fa-calendar color"></i> Aug. 2014 - Aug. 2015</span></h5>
                 <h6><span class="fa fa-briefcase"></span> The Taiwan R.O.C. Army</h6>
-                <p>In charge of the political affairs of Battalion B of 21st Artillery Command. Helped soldiers reduced stress.</p>
+                <p>In charge of the political affairs of Battalion B of 21st Artillery Command. Helped soldiers reduce stress.</p>
             </li>
             <li>
                 <h5>Web Developer Intern <span class="duration"><i class="fa fa-calendar color"></i> Mar. 2014 - July 2014</span></h5>
@@ -292,17 +292,17 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Master in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2019 - 2021</span></h5>
+                <h5>M.S. in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2019 - 2021</span></h5>
                 <h6><span class="fa fa-book"></span> New York University (Courant Institute)</h6>
                 <p>Machine Learning, Computational Cognitive Modeling, Big Data, Honors Algorithms, Programming Languages, Operating Systems</p>
             </li>
             <li>
-                <h5>Master in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2016 - 2018</span></h5>
+                <h5>M.S. in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2016 - 2018</span></h5>
                 <h6><span class="fa fa-book"></span> National Tsing Hua University</h6>
                 <p>Deep Learning, Data Mining, Computer Graphics, Parallel Programming, Advanced Computer Architecture, Many-Core Systems, VLSI System Design</p>
             </li>
             <li>
-                <h5>Bachelor in Electrical Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2014</span></h5>
+                <h5>B.S. in Electrical Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2014</span></h5>
                 <h6><span class="fa fa-book"></span> National Taiwan University</h6>
 		<p>Digital Speech Processing, Computer Programming (C++), Algorithms, Data Structures, Computer Architecture</p>
 	    </li>
